--- a/cppcon2025/index.html
+++ b/cppcon2025/index.html
@@ -320,7 +320,7 @@ case 0xa9: // LDA #imm
           </section>
           <section>
             <h2>Memory - Reading</h2>
-            <pre><code class="javascript" data-trim>
+            <pre><code class="javascript" data-trim data-line-numbers="|1|2-3|6|7|8-10|11|">
 var ram = new Uint8Array(0x8000), romsel = 0, roms = [];
 var os = load("OS");
 roms[15] = load("BASIC");
@@ -337,7 +337,7 @@ function readmem(addr) {
           </section>
           <section>
             <h2>Memory - Writing</h2>
-            <pre><code class="javascript" data-trim>
+            <pre><code class="javascript" data-trim data-line-numbers="|2|3|">
 function writemem(addr, b) {
     if (addr &lt; 0x8000) ram[addr] = b;
     if (addr &gt;= 0xfe00 &amp;&amp; addr &lt; 0xff00) writehw(addr, b);
