--- a/cppcon2025/index.html
+++ b/cppcon2025/index.html
@@ -24,14 +24,7 @@
       <div class="slides">
         <!---------------------------------------------------------------------->
         <section>
-          <section class="first">
-            <h1>Emulating the<br />BBC&nbsp;Micro<br />in Javascript</h1>
-            <h3>
-              <a href="https://bsky.app/profile/matt.godbolt.org"
-                >Matt Godbolt</a
-              >
-            </h3>
-            <h3>CppCon 2025</h3>
+          <section class="first" data-background="title.png">
           </section>
           <section>
             <h2 class="type-in">
