--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <li><a href="abug2020">ABUG 2020</a></li>
     <li><a href="aq">Aquatic 2020</a></li>
     <li><a href="spacex">SpaceX 2025</a></li>
+    <li><a href="cppcon2025">CppCon 2025</a></li>
 </ul>
 
 </body>
